examples/ecsfargate/sample_templates/sceptre-vpcinfra-dev-vpc.yaml
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Outputs": {
    "AvailabilityZones": {
      "Value": {
        "Fn::Join": [
          ",",
          [
            {
              "Fn::Select": [
                0,
                {
                  "Fn::GetAZs": ""
                }
              ]
            },
            {
              "Fn::Select": [
                1,
                {
                  "Fn::GetAZs": ""
                }
              ]
            }
          ]
        ]
      }
    },
    "CIDR": {
      "Value": "10.128.0.0/16"
    },
    "PrivateSubnets": {
      "Value": {
        "Fn::Join": [
          ",",
          [
            {
              "Ref": "PrivateSubnet0"
            },
            {
              "Ref": "PrivateSubnet1"
            }
          ]
        ]
      }
    },
    "PublicSubnets": {
      "Value": {
        "Fn::Join": [
          ",",
          [
            {
              "Ref": "PublicSubnet0"
            },
            {
              "Ref": "PublicSubnet1"
            }
          ]
        ]
      }
    },
    "VpcId": {
      "Value": {
        "Ref": "VPC"
      }
    }
  },
  "Resources": {
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway"
    },
    "InternetGatewayAttachment": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        },
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "Type": "AWS::EC2::VPCGatewayAttachment"
    },
    "NatGateway0": {
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NatGatewayEIP0",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "PublicSubnet0"
        }
      },
      "Type": "AWS::EC2::NatGateway"
    },
    "NatGateway1": {
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NatGatewayEIP1",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "PublicSubnet1"
        }
      },
      "Type": "AWS::EC2::NatGateway"
    },
    "NatGatewayEIP0": {
      "Properties": {
        "Domain": "vpc"
      },
      "Type": "AWS::EC2::EIP"
    },
    "NatGatewayEIP1": {
      "Properties": {
        "Domain": "vpc"
      },
      "Type": "AWS::EC2::EIP"
    },
    "PrivateRouteTable0": {
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "Type": "AWS::EC2::RouteTable"
    },
    "PrivateRouteTable1": {
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "Type": "AWS::EC2::RouteTable"
    },
    "PrivateRouteTableAssociation0": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable0"
        },
        "SubnetId": {
          "Ref": "PrivateSubnet0"
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "PrivateRouteTableAssociation1": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable1"
        },
        "SubnetId": {
          "Ref": "PrivateSubnet1"
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "PrivateSubnet0": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.128.10.0/24",
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "PrivateSubnet1": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.128.11.0/24",
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "PrivateSubnetDefaultRoute0": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NatGateway0"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTable0"
        }
      },
      "Type": "AWS::EC2::Route"
    },
    "PrivateSubnetDefaultRoute1": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NatGateway1"
        },
        "RouteTableId": {
          "Ref": "PrivateRouteTable1"
        }
      },
      "Type": "AWS::EC2::Route"
    },
    "PublicRouteTable": {
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "Type": "AWS::EC2::RouteTable"
    },
    "PublicRouteTableAssociation0": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "SubnetId": {
          "Ref": "PublicSubnet0"
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "PublicRouteTableAssociation1": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "SubnetId": {
          "Ref": "PublicSubnet1"
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "PublicSubnet0": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.128.0.0/24",
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "PublicSubnet1": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.128.1.0/24",
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "Type": "AWS::EC2::Subnet"
    },
    "PublicSubnetDefaultRoute": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGateway"
        },
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        }
      },
      "Type": "AWS::EC2::Route"
    },
    "VPC": {
      "Properties": {
        "CidrBlock": "10.128.0.0/16",
        "EnableDnsHostnames": "true",
        "Tags": []
      },
      "Type": "AWS::EC2::VPC"
    }
  }
}
